<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="2dp"
        app:columnCount="2"
        app:rowCount="2">

        <ImageView
            android:id="@+id/ivImage1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/image_1"
            android:cropToPadding="true"
            android:padding="1dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/ivImage2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/image_2"
            android:cropToPadding="true"
            android:padding="1dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/ivImage3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/image_3"
            android:cropToPadding="true"
            android:padding="1dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/amu_text"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeTextType="uniform"
            android:ellipsize="none"
            android:gravity="center"
            android:padding="1dp"
            android:textColor="#000000"
            android:textSize="8sp"
            android:textStyle="bold"
            tools:text="+1" />

    </androidx.gridlayout.widget.GridLayout>

</RelativeLayout>